--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ override.tf.json
 *_override.tf
 *_override.tf.json
 
+
+# .gitignore
+.terraform.lock.hcl
+
 # Include override files you do wish to add to version control using negated pattern
 # !example_override.tf
 
@@ -32,3 +36,8 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+
+# Keypair
+key_pair.tf
+splunkk.pem
